Moved XSLT to the document store